Implement mediaFileService basic access